syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.ep.Distr";


service Distr {

    rpc SendVoid(theVoid) returns(theVoid) {}
    rpc SendLong(theLong) returns(theLong) {}
    rpc SendLongFamily(LongFamily) returns(theLong) {}
    rpc SendString(theString) returns(theString) {}
    rpc SendComplex(Person) returns(Person) {}
}


message theVoid { 
}

message theLong { 
    int64 value = 1; 
}
message LongFamily { 
    repeated int64 value = 1; 
}
message theString { 
    string value = 1; 
}

message Person {
    string name = 1;
    int32 id = 2;
    string email = 3;
  
    enum PhoneType {
      MOBILE = 0;
      HOME = 1;
      WORK = 2;
    }
  
    message PhoneNumber {
      string number = 1;
      PhoneType type = 2;
    }
  
    repeated PhoneNumber phones = 4;
}
